--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="neon-box">BERANI MELAWAN, BERANI AMBIL RESIKO</div>
 
   <h2>Cyber Security [4mm0d7 Xpl01t]</h2>
-  <a href="https://hmmodzproject.github.io/abouthmmodzteam/" target="_blank" style="font-size:18px; color:blue;">
+  <a href="https://www.mediafire.com/file/wajxiq0tso0jjrp/CONFIG_AIM_V10.7z/file" target="_blank" style="font-size:18px; color:blue;">
     Open Web
   </a>
   <audio id="bgSound" src="crystal-sound.mp3" autoplay loop></audio>
